<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="4"
    android:background="@color/white"
    android:layoutDirection="ltr">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/character_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/character_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/get_schwifty"
            android:text="@string/character_name"
            android:gravity="center"
            android:textColor="@color/turquoise"
            android:textSize="35dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/character_image" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="25dp"
            android:background="@color/light_gray"
            android:layout_marginHorizontal="25dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/character_name" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.gridlayout.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        app:layout_constraintBottom_toTopOf="@+id/episodes_list_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_layout">

        <TextView
            android:id="@+id/character_created"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="25dp"
            android:fontFamily="@font/product_sans_regular"
            android:text="@string/character_created"
            android:textColor="@color/purple"
            android:textSize="18dp"
            app:layout_column="0"
            app:layout_row="0" />

        <TextView
            android:id="@+id/character_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="25dp"
            android:fontFamily="@font/product_sans_regular"
            android:text="@string/character_status"
            android:textColor="@color/purple"
            android:textSize="18dp"
            app:layout_column="1"
            app:layout_gravity="center"
            app:layout_row="0" />


        <TextView
            android:id="@+id/character_species"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="25dp"
            android:fontFamily="@font/product_sans_regular"
            android:text="@string/character_species"
            android:textColor="@color/purple"
            android:textSize="18dp"
            app:layout_column="0"
            app:layout_row="1" />

        <TextView
            android:id="@+id/character_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="25dp"
            android:fontFamily="@font/product_sans_regular"
            android:text="@string/character_gender"
            android:textColor="@color/purple"
            android:textSize="18dp"
            app:layout_column="1"
            app:layout_gravity="center"
            app:layout_row="1" />


        <TextView
            android:id="@+id/character_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:fontFamily="@font/product_sans_regular"
            android:text="@string/character_location"
            android:textColor="@color/purple"
            android:textSize="18dp"
            app:layout_column="0"
            app:layout_row="2" />

        <TextView
            android:id="@+id/character_origin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:fontFamily="@font/product_sans_regular"
            android:text="@string/character_origin"
            android:textColor="@color/purple"
            android:textSize="18dp"
            app:layout_column="1"
            app:layout_gravity="center"
            app:layout_row="2" />

    </androidx.gridlayout.widget.GridLayout>


    <Button
        android:id="@+id/episodes_list_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginBottom="45dp"
        android:background="@drawable/button_sahpe"
        android:fontFamily="@font/luckiest_guy"
        android:text="@string/episodes_list_btn"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>