<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="25dp"
    android:background="@color/white"
    android:layoutDirection="ltr">


    <TextView
        android:id="@+id/episode_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/luckiest_guy"
        android:gravity="center"
        android:text="@string/episode_name"
        android:textColor="@color/turquoise"
        android:textSize="35dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/grid_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/product_sans_regular"
        android:textColor="@color/purple"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/episode_name">

        <TextView
            android:id="@+id/episode_air_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="35dp"
            android:fontFamily="@font/product_sans_regular"
            android:gravity="center"
            android:text="@string/episode_air_date"
            android:textColor="@color/purple"
            android:textSize="18dp"
            app:layout_column="0"
            app:layout_gravity="center"
            app:layout_row="0" />

        <TextView
            android:id="@+id/create_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="35dp"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/product_sans_regular"
            android:gravity="center"
            android:text="@string/episode_create_date"
            android:textColor="@color/purple"
            android:textSize="18dp"
            app:layout_column="1"
            app:layout_gravity="right"
            app:layout_row="0" />

    </androidx.gridlayout.widget.GridLayout>

    <TextView
        android:id="@+id/other_character_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/luckiest_guy"
        android:gravity="center"
        android:text="@string/other_characters_in_episode"
        android:textSize="22dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grid_layout" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:paddingBottom="25dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/other_character_title">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/characters_episode_list_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>